--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,14 @@
+ansible>=2.8.0 # GPL-3.0
+boto3>=1.9 # VSPL
+bs4>=0.0.1 # MIT
+netaddr>=0.7 # Apache-2.0
+PyYAML>=3.12 # MIT
+python-dateutil>=2.5.3 # BSD
+pbr!=2.1.0,>=2.0.0 # Apache-2.0
+six>=1.10.0 # MIT
+requests>=2.14.2 # Apache-2.0
+stevedore>=1.20.0 # Apache-2.0
 tosca-parser>=1.4.0 # Apache-2.0
-boto3
-netaddr
-ansible
-bs4
+
+# Babel!=2.4.0,>=2.3.4 # BSD
+# cliff!=2.9.0,>=2.8.0 # Apache-2.0
