--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = tosca-tool
 summary = Cloud Application Management Tool by TOSCA.
-description-file = README.rst
+description-file = README.md
 author = bura2017
 author-email = shvetcova@ispras.ru
 classifier =
