--- a/setup.cfg
+++ b/setup.cfg
@@ -17,18 +17,17 @@ classifier =
 
 [files]
 packages =
-    translator
-
+    toscatranslator
 
 [entry_points]
 console_scripts =
-    tosca-tool = translator.shell:main
+    tosca-tool = toscatranslator.shell:main
 
 [compile_catalog]
-directory = translator/locale
-domain = translator
+directory = toscatranslator/locale
+domain = toscatranslator
 
 [update_catalog]
-domain = translator
-output_dir = translator/locale
-input_file = translator/locale/translator.pot
+domain = toscatranslator
+output_dir = toscatranslator/locale
+input_file = toscatranslator/locale/toscatranslator.pot
