--- a/toscatranslator/providers/openstack/TOSCA_openstack_definition_1_0.yaml
+++ b/toscatranslator/providers/openstack/TOSCA_openstack_definition_1_0.yaml
@@ -341,13 +341,14 @@ node_types:
 
   openstack.nodes.SecurityGroup: # os_security_group
     derived_from: openstack.nodes.Root
+    properties:
+      name:
+        type: string
+        required: true
     attributes:
       description:
         type: string
         required: false
-      name:
-        type: string
-        required: true
     capabilities:
       host:
         type: openstack.capabilities.Container
