--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = tosca-tool
+name = clouni
 summary = Cloud Application Management Tool by TOSCA.
 description-file = README.md
 author = bura2017
@@ -21,7 +21,7 @@ packages =
 
 [entry_points]
 console_scripts =
-    tosca-tool = toscatranslator.shell:main
+    clouni = toscatranslator.shell:main
 
 [compile_catalog]
 directory = toscatranslator/locale
