updated setup to work

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,6 @@
 [metadata]
 name = clouni
+version = 0.0.1
 summary = Cloud Application Management Tool by TOSCA.
 description-file = README.md
 author = bura2017
@@ -15,19 +16,14 @@ classifier =
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
 
-[files]
-packages =
-    toscatranslator
+[options]
+packages = find:
 
-[entry_points]
+[options.entry_points]
 console_scripts =
     clouni = toscatranslator.shell:main
 
-[compile_catalog]
-directory = toscatranslator/locale
-domain = toscatranslator
-
-[update_catalog]
-domain = toscatranslator
-output_dir = toscatranslator/locale
-input_file = toscatranslator/locale/toscatranslator.pot
+[options.packages.find]
+exclude =
+    testing
+    .ansible
