--- a/toscatranslator/providers/openstack/TOSCA_openstack_definition_1_0.yaml
+++ b/toscatranslator/providers/openstack/TOSCA_openstack_definition_1_0.yaml
@@ -613,21 +613,21 @@ node_types:
 relationship_types:
   openstack.relationships.DependsOn:
     description: This type results in ordering of initializing objects.
-    derived_from: tosca.relationships.DependsOn
+    derived_from: provider.relationships.DependsOn
     valid_target_types: [ openstack.capabilities.Node ]
 
   openstack.relationships.HostedOn:
     description: This type represents the object to be the part of another object.
-    derived_from: tosca.relationships.HostedOn
+    derived_from: provider.relationships.HostedOn
 
   openstack.relationships.ConnectsTo:
     description: This type represents the network connection between to instances or two software components.
-    derived_from: tosca.relationships.Root
+    derived_from: provider.relationships.Root
     valid_target_types: [ openstack.capabilities.Node ]
 
   openstack.relationships.AttachesTo:
     description: This type represents the attachment of volume to the server
-    derived_from: tosca.relationships.Root
+    derived_from: provider.relationships.Root
     valid_target_types: [ openstack.capabilities.Attachment ]
     properties:
       device:
@@ -636,12 +636,12 @@ relationship_types:
 
   openstack.relationships.network.LinksTo:
     description: This type appears between FloatingIp and Network
-    derived_from: openstack.relationships.network.LinksTo
+    derived_from: provider.relationships.network.LinksTo
     valid_target_types: [ openstack.capabilities.network.Linkable ]
 
   openstack.relationships.network.BindsTo:
     description: This type appears between FloatingIp and Server
-    derived_from: openstack.relationships.network.BindsTo
+    derived_from: provider.relationships.network.BindsTo
     valid_target_types: [ openstack.capabilities.network.Bindable ]
 
 ##########################################################################
