--- a/examples/tosca-server-example-openstack.yaml
+++ b/examples/tosca-server-example-openstack.yaml
@@ -34,8 +34,15 @@ topology_template:
       type:  openstack.nodes.Port
       properties:
         fixed_ips:
-          - { get_operation_output: [ SELF, Standard, configure, network_ip_struct ] }
+          - { get_operation_output: [ SELF, Standard, confgure, network_ip_struct ] }
         name:  server_kube_master_port_0
+      interfaces:
+        Standard:
+          configure:
+            implementation: server_kube_master_port_configure.yaml
+            inputs:
+              network_name: { get_operation_output: [ server_kube_master_port_network, Target, choose, name ] }
+              ip: 192.168.12.25
 
 
     server_kube_master_floatingip:
@@ -46,7 +53,7 @@ topology_template:
         - network:
             node_filter:
               properties:
-                name:  { get_operation_output: [server_kube_master_floatingip_network, Target, choose, network_name] }
+                name:  { get_operation_output: [server_kube_master_floatingip_network, Target, choose, name] }
             relationship: server_kube_master_floatingip_network
         - server:  server_kube_master_server
 
@@ -72,27 +79,54 @@ topology_template:
       type: openstack.relationships.DependsOn
       interfaces:
         Target:
-          total: images_info_task.yaml
+          total: server_kube_master_server_image_total.yaml
           choose:
             implementation: contains.yaml
             inputs:
-              facts: { get_operation_output: SELF, Target, total, openstack_images }
+              facts: { get_operation_output: SELF, Target, total, target_objects }
+              args: ["ubuntu", "xenial", "16.04"]
 
     server_kube_master_floatingip_network:
       type: openstack.relationships.DependsOn
       interfaces:
         Target:
-          total: networks_info_task.yaml
+          total: server_kube_master_floatingip_network_total.yaml
           choose:
             implementation: equals.yaml
             inputs:
               facts: {get_operation_output: [SELF, Target, total, target_objects]}
-              network_name: {get_operation_output: [server_kube_master_floating_ip_subnet, Target, choose, name]}
+              name: {get_operation_output: [server_kube_master_floating_ip_subnet, Target, choose, name]}
 
     server_kube_master_floating_ip_subnet:
       type: openstack.relationships.DependsOn
       interfaces:
         Target:
-          total: subnets_info_task.yaml
+          total: server_kube_master_floating_ip_subnet_total.yaml
           choose:
             implementation: ip_contains.yaml
+            inputs:
+              facts: {get_operation_output: [SELF, Target, total, target_objects]}
+              ip: 10.100.115.15
+
+    server_kube_master_port_network:
+      type: openstack.relationships.DependsOn
+      interfaces:
+        Target:
+          total: server_kube_master_port_network_total.yaml
+          choose:
+            implementation: equals.yaml
+            inputs:
+              facts: {get_operation_output: [SELF, Target, total, target_objects]}
+              name: {get_operation_output: [server_kube_master_port_subnet, Target, choose, name]}
+
+
+    server_kube_master_port_subnet:
+      type: openstack.relationships.DependsOn
+      interfaces:
+        Target:
+          total: server_kube_master_port_subnet_total.yaml
+          choose:
+            implementation: ip_contains.yaml
+            inputs:
+              facts: {get_operation_output: [SELF, Target, total, target_objects]}
+              ip: 192.168.12.25
